# agentic-llm

./: INSTALL.md  README.md  feasibility.md  implementation.md  pyproject.toml  requirements.txt
app/: main.py  models.py  requirements.txt  schemas.py
app/routers/: items.py  users.py
documentation/: comparison-to-gpt.md  draft-notes.md  feasibility.md  functional-specs.md  methodology.md  overview.md  technical-specs.md  timeframe-plan.md
scripts/: start.sh
src/: agentic_llm.db  agentic_llm.db-journal  main.py
src/agentic_llm/: __init__.py
src/agentic_llm/api/v1/: __init__.py
src/agentic_llm/api/v1/endpoints/: agents.py
src/agentic_llm/core/: config.py
src/agentic_llm/db/: base.py
src/agentic_llm/db/models/: agent.py
src/agentic_llm/schemas/: agent.py
tests/: test_crud.py  test_main.py  test_models.py  test_schemas.py
