[tool.poetry]
name = "agentic-llm"
authors = ["brad"]]
version = "0.1.0"
description = "A modular, self-learning, agent-based AI system using FastAPI, SQLAlchemy, Pydantic, and asyncio."

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.22"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
