[tool.poetry]
name = "agentic-llm"
authors = ["brad"]
version = "0.1.0"
description = "A modular, self-learning, agent-based AI system using FastAPI, SQLAlchemy, Pydantic, and asyncio."

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.22"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "next-gen-ai-system"
version = "0.1.0"
authors = [
    { name = "John Doe", email = "john.doe@example.com" },
]
description = "Next-Generation AI System with Modular, Self-Learning, Agent-Based Architecture"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/username/next-gen-ai-system"  # Update with actual repo URL
"Bug Tracker" = "https://github.com/username/next-gen-ai-system/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Dependencies will need to be added based on the specific requirements
# [project.dependencies]
# transformers = "^4.0.0"
# torch = "^2.0.0"
# networkx = "^3.0"
