[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentic-llm"
version = "0.1.0"
description = "A modular, self-learning, agent-based AI system using FastAPI, SQLAlchemy, Pydantic, and asyncio."
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"
packages = [
    { include = "agentic_llm", from = "src" },
]
package-mode = true
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
sqlalchemy = "^1.4.22"
asyncio = "^3.4.3"
uvicorn = "^0.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
alembic = "^1.7.1"
sqlalchemy-utils = "^0.37.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[tool.poetry.urls]
"Homepage" = "https://github.com/username/agentic-llm"  # Update with actual repo URL
"Bug Tracker" = "https://github.com/username/agentic-llm/issues"
